--- a/Example/Podfile
+++ b/Example/Podfile
@@ -8,6 +8,8 @@ post_install do |installer|
   end
 end
 
+source 'https://github.com/CocoaPods/Specs.git'
+
 platform :ios,'9.0'
 inhibit_all_warnings!
 
