--- a/Example/Podfile
+++ b/Example/Podfile
@@ -8,7 +8,7 @@ post_install do |installer|
   end
 end
 
-source 'https://github.com/CocoaPods/Specs.git'
+#source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios,'9.0'
 inhibit_all_warnings!
