--- a/Example/Podfile
+++ b/Example/Podfile
@@ -13,7 +13,7 @@ end
 platform :ios,'9.0'
 inhibit_all_warnings!
 
-target 'MKScannerSDK_Example' do
+target 'MKScannerSDK_Example' dosudo gem install -n /usr/local/bin cocoapods
   
 pod 'MKScannerSDK', :path => '../'
 
