--- a/Example/Podfile
+++ b/Example/Podfile
@@ -9,6 +9,7 @@ post_install do |installer|
 end
 
 source 'https://github.com/CocoaPods/Specs.git'
+source 'https://cdn.cocoapods.org/'
 
 platform :ios,'9.0'
 inhibit_all_warnings!
