--- a/Example/Podfile
+++ b/Example/Podfile
@@ -8,6 +8,7 @@ post_install do |installer|
   end
 end
 
+source 'https://github.com/CocoaPods/Specs.git'
 source 'https://cdn.cocoapods.org/'
 
 platform :ios,'9.0'
