--- a/Example/MKScannerSDK/MKScannerSDK-Info.plist
+++ b/Example/MKScannerSDK/MKScannerSDK-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>MokoScanner need to use your mobile phone bluetooth to communicate with devices</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>MokoScanner need to use your mobile phone bluetooth to communicate with devices</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
